@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    2019jun23
+;; Version:    2019jun24
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-elinks.el>
@@ -1265,7 +1265,15 @@ This needs a temporary directory; see: (find-prepared-intro)"
 ;; (find-refining-intro "4. A tip for beginners")
 ;; (find-refining-intro "4. A tip for beginners" "find-here-links-beginner")
 ;;
+(defun find-here-links-beginner (&optional arg)
+  "A variant of `find-here-links' that may create a three-window setting."
+  (interactive "P")
+  (if arg (find-here-links-3) (find-here-links)))
+
 ;; «find-here-links-3»  (to ".find-here-links-3")
+;; See: (find-here-links-intro "4. `find-here-links-3'")
+;;      (find-here-links-intro "5. `find-here-links-1'")
+;;
 (defvar ee-window-configuration-before-M-h-M-3 nil)
 
 (defun find-here-links-3 ()
@@ -1277,7 +1285,10 @@ not nil we abort instead of overwriting it.
 See: (find-here-links-intro \"4. `find-here-links-3'\")"
   (interactive)
   (if ee-window-configuration-before-M-h-M-3
-      (error))
+      (let ((overwrite
+	     (yes-or-no-p "Overwrite `ee-window-configuration-before-M-h-M-3'? ")))
+	(if (not overwrite)
+	    (error))))
   (setq ee-window-configuration-before-M-h-M-3
 	(current-window-configuration))
   (find-wset "13_o2_o_coo" nil '(find-here-links) '(eejump-1)))
@@ -1290,10 +1301,6 @@ See: (find-here-links-intro \"5. `find-here-links-1'\")"
   (setq ee-window-configuration-before-M-h-M-3 nil))
 
 
-(defun find-here-links-beginner (&optional arg)
-  "A variant of `find-here-links' that may create a three-window setting."
-  (interactive "P")
-  (if arg (find-here-links-3) (find-here-links)))
 
 
 
